deploy: db03708012e0478e3aba43f70b0717067bbd900e

--- a/main/tutorials/l_master.ipynb
+++ b/main/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4386aade",
+   "id": "22d68eee",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ae7538c",
+   "id": "45dcff2b",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d676c4",
+   "id": "63c0ecaa",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087f2eb8",
+   "id": "c1b4d488",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a953ddf2",
+   "id": "79193e81",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e909b810",
+   "id": "459adcf1",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "553ea08a",
+   "id": "589e1a1d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:07.456671Z",
-     "iopub.status.busy": "2025-03-17T11:36:07.456298Z",
-     "iopub.status.idle": "2025-03-17T11:36:10.409121Z",
-     "shell.execute_reply": "2025-03-17T11:36:10.408506Z"
+     "iopub.execute_input": "2025-03-18T10:06:59.414257Z",
+     "iopub.status.busy": "2025-03-18T10:06:59.414078Z",
+     "iopub.status.idle": "2025-03-18T10:07:02.362494Z",
+     "shell.execute_reply": "2025-03-18T10:07:02.361806Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe74f1b",
+   "id": "471eacb6",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b1d7eec",
+   "id": "84d9f9da",
    "metadata": {},
    "source": [
     "1. a bare Hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c206fad",
+   "id": "91b5c146",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ad25688",
+   "id": "c604237d",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e063793",
+   "id": "772e302c",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "622654cf",
+   "id": "4848bd98",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d46f7e3f",
+   "id": "520b4172",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9456751",
+   "id": "4a0f5130",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4f436667",
+   "id": "0122357a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:10.411727Z",
-     "iopub.status.busy": "2025-03-17T11:36:10.411105Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.442287Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.441682Z"
+     "iopub.execute_input": "2025-03-18T10:07:02.364849Z",
+     "iopub.status.busy": "2025-03-18T10:07:02.364578Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.440315Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.439780Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f317748",
+   "id": "c1bbe741",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d7fb9d84",
+   "id": "f2e38e38",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.444281Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.443915Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.447589Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.446880Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.442199Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.442014Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.445786Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.445317Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36005e82",
+   "id": "c4a5593b",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a176fe6",
+   "id": "fe2767ce",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca0cc12",
+   "id": "b7d4999c",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebb0afa",
+   "id": "a0cdabbe",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b95a9b52",
+   "id": "1f675295",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.449669Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.449211Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.496377Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.495869Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.447716Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.447403Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.493285Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.492696Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0565db35",
+   "id": "5653c25d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "102307d6",
+   "id": "128344e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.498375Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.497931Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.570720Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.570226Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.495222Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.494840Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.566950Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.566424Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58bfb7a7",
+   "id": "b3cd54d6",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d8ffd18",
+   "id": "347900ac",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "22109e2b",
+   "id": "c590a43c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.572599Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.572416Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.601753Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.601273Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.568931Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.568563Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.597578Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.597071Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6a2e5d",
+   "id": "a41de164",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8867499",
+   "id": "91dd6ca3",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfaa48c8",
+   "id": "f0ec5057",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cf5ed2b",
+   "id": "0f4673a7",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8466c6e1",
+   "id": "d380c124",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5b1e3893",
+   "id": "4aad0ad7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.603768Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.603419Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.608694Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.608095Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.599640Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.599277Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.603349Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.602733Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c3dd22",
+   "id": "2adbcc13",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d14a7268",
+   "id": "d44c5e2a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.610846Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.610477Z",
-     "iopub.status.idle": "2025-03-17T11:36:12.613518Z",
-     "shell.execute_reply": "2025-03-17T11:36:12.612916Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.605231Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.605054Z",
+     "iopub.status.idle": "2025-03-18T10:07:04.608175Z",
+     "shell.execute_reply": "2025-03-18T10:07:04.607551Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fc6007d",
+   "id": "79d5ef9d",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f05f8a92",
+   "id": "f16edd91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:12.615273Z",
-     "iopub.status.busy": "2025-03-17T11:36:12.614901Z",
-     "iopub.status.idle": "2025-03-17T11:36:15.241304Z",
-     "shell.execute_reply": "2025-03-17T11:36:15.240687Z"
+     "iopub.execute_input": "2025-03-18T10:07:04.609930Z",
+     "iopub.status.busy": "2025-03-18T10:07:04.609602Z",
+     "iopub.status.idle": "2025-03-18T10:07:07.192065Z",
+     "shell.execute_reply": "2025-03-18T10:07:07.191442Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd3d0c58",
+   "id": "7db24458",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9869b32",
+   "id": "8b3f052f",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50efb989",
+   "id": "753b5b64",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "423cb5af",
+   "id": "5d6526e7",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "adef380a",
+   "id": "d0bdfacd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:15.243515Z",
-     "iopub.status.busy": "2025-03-17T11:36:15.243135Z",
-     "iopub.status.idle": "2025-03-17T11:36:15.246766Z",
-     "shell.execute_reply": "2025-03-17T11:36:15.246170Z"
+     "iopub.execute_input": "2025-03-18T10:07:07.194088Z",
+     "iopub.status.busy": "2025-03-18T10:07:07.193717Z",
+     "iopub.status.idle": "2025-03-18T10:07:07.197379Z",
+     "shell.execute_reply": "2025-03-18T10:07:07.196745Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f99412c9120>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f7a13f353a0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51246ef0",
+   "id": "56df61bc",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b754d7",
+   "id": "cf42b651",
    "metadata": {},
    "source": [
     "## Postprocessing"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a611671f",
+   "id": "cde24964",
    "metadata": {},
    "source": [
     "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d5d5aae",
+   "id": "2c25fd7c",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "417073de",
+   "id": "d7ad53fd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:15.248663Z",
-     "iopub.status.busy": "2025-03-17T11:36:15.248323Z",
-     "iopub.status.idle": "2025-03-17T11:36:15.251487Z",
-     "shell.execute_reply": "2025-03-17T11:36:15.250855Z"
+     "iopub.execute_input": "2025-03-18T10:07:07.199338Z",
+     "iopub.status.busy": "2025-03-18T10:07:07.199018Z",
+     "iopub.status.idle": "2025-03-18T10:07:07.201934Z",
+     "shell.execute_reply": "2025-03-18T10:07:07.201384Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "159f1cb2",
+   "id": "953da7ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-03-17T11:36:15.253245Z",
-     "iopub.status.busy": "2025-03-17T11:36:15.252882Z",
-     "iopub.status.idle": "2025-03-17T11:36:16.313160Z",
-     "shell.execute_reply": "2025-03-17T11:36:16.312630Z"
+     "iopub.execute_input": "2025-03-18T10:07:07.203828Z",
+     "iopub.status.busy": "2025-03-18T10:07:07.203410Z",
+     "iopub.status.idle": "2025-03-18T10:07:08.259323Z",
+     "shell.execute_reply": "2025-03-18T10:07:08.258768Z"
     }
    },
    "outputs": [
